tests/quick-start-delete-dependency/quick-start-delete-dependency.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Delete @flow file with a @flow dependent file, expect error.
Error --------------------------------------------------------------------------------------------------------- b.js:2:9

Cannot resolve module `./a`.

   2| require('./a');
              ^^^^^



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 1/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Revert file, expect no errors.
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Done!
